// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebarBoardItem sidebar call hideSidebar 1`] = `
<div>
  <div
    class="SidebarBoardItem"
  >
    <div
      class="octo-sidebar-item category ' expanded "
    >
      <button
        class="Button IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-chevron-down ChevronDownIcon"
        />
      </button>
      <div
        class="octo-sidebar-title category-title"
        title="Category 1"
      >
        Category 1
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="octo-sidebar-item subitem "
    >
      <div
        class="octo-sidebar-icon"
      >
        i
      </div>
      <div
        class="octo-sidebar-title"
        title="board title"
      >
        board title
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
    <div
      class="octo-sidebar-item subitem "
    >
      <div
        class="octo-sidebar-icon"
      >
        i
      </div>
      <div
        class="octo-sidebar-title"
        title="board title"
      >
        board title
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarBoardItem sidebar call hideSidebar 2`] = `
<div>
  <div
    class="SidebarBoardItem"
  >
    <div
      class="octo-sidebar-item category ' collapsed "
    >
      <button
        class="Button IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-chevron-right ChevronRightIcon"
        />
      </button>
      <div
        class="octo-sidebar-title category-title"
        title="Category 1"
      >
        Category 1
      </div>
      <div
        aria-label="menuwrapper"
        class="MenuWrapper"
        role="button"
      >
        <button
          class="Button IconButton"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
